--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/LibraryManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jfoenix.jar=C:\\Users\\Mohamed Essam\\Downloads\\jfoenix.jar
 file.reference.sqlite-jdbc-3.21.0.jar=C:\\Users\\Mohamed Essam\\Downloads\\sqlite-jdbc-3.21.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,7 +37,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.sqlite-jdbc-3.21.0.jar}
+    ${file.reference.sqlite-jdbc-3.21.0.jar}:\
+    ${file.reference.jfoenix.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
