--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.jar=${dist.dir}/LibraryManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Java-jdk-10.0.1=C:\\Program Files\\Java\\jdk-10.0.1
 file.reference.jfoenix.jar=C:\\Users\\Mohamed Essam\\Downloads\\jfoenix.jar
 file.reference.sqlite-jdbc-3.21.0.jar=C:\\Users\\Mohamed Essam\\Downloads\\sqlite-jdbc-3.21.0.jar
 includes=**
@@ -39,8 +38,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.sqlite-jdbc-3.21.0.jar}:\
-    ${file.reference.jfoenix.jar}:\
-    ${file.reference.Java-jdk-10.0.1}
+    ${file.reference.jfoenix.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
